--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,41 @@ html, body {
 }
 
 h1 {
-  position:fixed;
-  top: 10%;
+  position:absolute;
+  top: 8%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: 'Gilda Display', serif;
   font-size: 4em;
   color:rgba(63, 15, 88, 0.5);
+}
+
+h2 {
+  position: absolute;
+  top: 19%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Lora', serif;
+  font-size: 1.7em;
+  color:rgba(62, 15, 88, 0.361);
+}
+
+.info {
+    position:absolute;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #ffffff3b;
+    padding: 20px 40px;
+    font-family: 'Gilda Display', serif;
+    color:rgba(63, 15, 88, 0.5);
+    font-size: 1.5em;
+    border-radius: 25px;
+    box-shadow: 0 0 20px rgba(0,139,253,0.25);
+}
+
+.prototype {
+    display:flex;
+    justify-content: space-around;
+
 }
