--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@ h3 {
     box-shadow: 0 0 20px rgba(144, 199, 243, 0.25);
 }
 
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .prototype {
     display:flex;
     justify-content: space-around;
@@ -89,20 +94,20 @@ h3 {
     left: 31%;
     transform: translate(-50%, -50%);
     background: #ffffff3b;
-    padding: 20px 35px;
+    padding: 25px 40px;
     font-family: 'Gilda Display', serif;
     color:rgba(63, 15, 88, 0.5);
     font-size: 1.5em;
     border-radius: 25px;
     box-shadow: 0 0 20px rgba(144, 199, 243, 0.25);
 }
-.methods {
+.solution {
     position:absolute;
     top: 50%;
     left: 67%;
     transform: translate(-50%, -50%);
     background: #ffffff3b;
-    padding: 20px 35px;
+    padding: 25px 40px;
     font-family: 'Gilda Display', serif;
     color:rgba(63, 15, 88, 0.5);
     font-size: 1.5em;
@@ -121,12 +126,13 @@ h3 {
     color:rgba(63, 15, 88, 0.5);
     font-size: 1.5em;
     border-radius: 25px;
+    flex-grow:2;
     box-shadow: 0 0 20px rgba(144, 199, 243, 0.25);
 }
-.solution {
+.methods {
     position:absolute;
-    top: 70%;
-    left: 70%;
+    top: 71%;
+    left: 72%;
     transform: translate(-50%, -50%);
     background: #ffffff3b;
     padding: 20px 35px;
@@ -140,7 +146,7 @@ h3 {
 .roles {
     position:absolute;
     top: 90%;
-    left: 51%;
+    left: 49%;
     transform: translate(-50%, -50%);
     background: #ffffff3b;
     padding: 20px 35px;
@@ -156,7 +162,8 @@ h3 {
 p {
     font-family: 'Gilda Display', serif;
     font-size: .7em;
-    color:rgb(62, 15, 88);
+    color:rgba(62, 15, 88, 0.779);
+    line-height:1.25;
 }
 
 span {
@@ -172,6 +179,5 @@ span {
     display:flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    gap: 7px;
-
+    gap: 10px;
 }
